# CDE-Orchestrator-MCP

./: .coverage.devbox.46964.XzobPDPx  .dockerignore  .env.example  .gitignore  .markdownlintrc  .pre-commit-config.yaml  AGENTS.md  AGENT_CONTINUATION_PROMPT.txt  AUDIT_RESULTS_2025-11-07.txt  BUGFIX_REPORT.md  CHANGELOG.md  CHECK_ENDPOINTS.ps1  CODEX.md  COMMIT_COMPLETE_SUMMARY.txt  COMO-USAR.md  CONSOLIDATION_W45_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_STATUS_2025-11-06.txt  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_STATUS.txt  GEMINI-INTEGRATION-GUIDE.md  GEMINI.md  IMPLEMENTACION-GIT-ANALYZER.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_PLAN_2025-11-05.md  IMPLEMENTATION_STATUS_GIT_ANALYZER.md  INTEGRATION.md  LICENSE  LICENSE-DUAL.md  LOCAL_VALIDATION_REPORT.md  MCP_STATUS_BAR_COMPLETE.md  ONBOARDING_REVIEW_REPORT.md  PHASE2_COMPLETE.md  PHASE3C_DEPLOYMENT_SUMMARY.md  PHASE3C_QUICK_LAUNCH.ps1  PHASE_2C_LAUNCH_README.md  PHASE_2C_LAUNCH_SUMMARY.md  PLANNING.md  PYTHON_VERSION_ANALYSIS.md  (+62 more)
.amazonq/rules/: rulegeneral.md
.cde/: READY-TO-EXECUTE-SEMANA2.md  SEMANA2-RESUMEN-EJECUTIVO.txt  SEMANA2-RESUMEN-FINAL.txt  SEMANA2-SETUP-COMPLETE.md  SEMANA2-TRABAJO-COMPLETADO.md  agent-launcher-direct.py  integrated_sessions_manifest.json  jules-instructions-semana2.md  jules_execution_plan.md  jules_execution_plan.md.rej  jules_monitor_2025-11-05_20-06-21.json  jules_sessions_raw.txt  launch-three-agents-direct.py  launch-three-agents-simple.ps1  launch-three-agents.ps1  launch-three-agents.py  orchestrate-semana2-parallel.py  progress_report_20251105_200713.md  progress_report_20251105_204234.md  quick-launch-three-agents.py  semana2-three-agent-execution-plan.md  workflow.yml
.cde/agent-instructions/: codex-semana2-task2-filenames-dates.md  gemini-semana2-task1-metadata-yaml.md  qwen-semana2-task3-directories.md
.cde/agent-results-parallel/: orchestration-results.json
.cde/backups/: state_20251120T231748_396217Z.json  state_20251121T165654_920636Z.json  state_20251121T174923_613774Z.json  state_20251121T193203_414081Z.json  state_20251121T194506_917019Z.json  state_20251121T201244_044759Z.json  state_20251121T203155_937242Z.json
.cde/bedrock-config/: aider-bedrock.json  claude-code-bedrock.json  orchestration.json
.cde/cache/: awesome_claude_skills_index.json
.cde/integrated_sessions/: 2738444897899046925.json  443657936940575260.json  6550513765712426553.json
.cde/issues/: local-20251031-031818.md  local-20251101-181208.md  local-20251104-080521.md  local-20251104-081244.md  local-20251104-081457.md  local-20251104-081712.md  local-20251104-081909.md  local-20251104-082238.md  local-20251104-083054.md  local-20251105-070752.md
.cde/prompts/: 00_onboarding.poml  01_define.poml  02_decompose.poml  03_design.poml  04_implement.poml  05_test.poml  06_review.poml  define.poml
.cde/scripts/: phase3c-check.py  phase3c-launch.ps1
.copilot/scripts/: research-helpers.ps1
.copilot/skills/: parallel-ai-research.md
.cursor/: mcp.json
.gemini/: settings.json  settings.json.orig
.github/: FUNDING.yml  HARCOS_BRANDING_GUIDELINES.md  HARCOS_FINAL_SUMMARY.txt  HARCOS_LANDING_PAGE.html  HARCOS_LANDING_PAGE_DEPLOYMENT.md  HARCOS_ORGANIZATION_SETUP.md  README_HARCOS_DEPLOYMENT.txt  START_HERE.md  copilot-instructions.md
.github/workflows/: auto-consolidate-old-weeks.yml  build-rust-wheels.yml  build-wheels.yml  ci.yml  pyrefly.yml  release.yml  sync-spec-kit-templates.yml  test-mcp-server.yml  weekly-cleanup.yml  weekly-consolidation-jules-separated.yml  weekly-consolidation-with-jules.yml
.jules/: README.md
.kilocode/: mcp.json
.kiro/settings/: mcp.json
agent-docs/: README.md  readme.md
agent-docs/design/: phase2-optimization-strategy.md
agent-docs/evaluation/: 00-START-HERE-MCP-READY-2025-11-08.md  RESUMEN-EJECUTIVO-2025-11-08.md  document-index.md  evaluation-mcp-tools-2025-11-08.md  evaluation-pr4-jules-implementation-2025-01.md  implementation-plan-real-project-2025-11-08.md  quick-start-mcp-ready-2025-11-08.md
agent-docs/execution/: COMMIT_SUMMARY_2025-11-06.md  EXECUTIONS-enrichment-system-complete-2025-11-23.md  (+123 more)
docs/: AGENTS.md  CODEX.md  GEMINI.md  GOVERNANCE_INDEX.md  GOVERNANCE_QUICK_MANUAL.md  GOVERNANCE_QUICK_REFERENCE.md  IMPLEMENTATION_PLAN_PROFESSIONAL.md  INDEX.md  INTEGRATION.md  LICENSE-DUAL.md  PROMPT-DEFINITIVO-ONBOARDING-ES.md  PYTHON_314_MIGRATION.md  QUICK-REFERENCE-ONBOARDING.md  QUICKFIX-RELOAD-TOOLS.md  QUICK_REFERENCE.md  README.md  SPONSORS.md  THE-ULTIMATE-ONBOARDING-PROMPT.md  agents.md  ai-research-quickstart.md  bedrock-configuration.md  ci-cd-quick-reference.md  ci-cd-setup-complete.md  como-usar.md  configuration-guide.md  docker-deployment.md  ephemeral-smart-reuse.md  executive_summary.md  governance_quick_reference.md  guia-inicio-paso-a-paso.md  index.md  instalacion-simple.md  integration.md  jules-quick-start.md  jules-setup.md  mcp-status-bar-complete-2025-11.md  mcp-status-bar-complete-implementation.md  mcp-status-bar-quick-guide.md  mcp-status-bar-solution.md  mcp-status-bar-solution.md.rej  (+30 more)
mcp-status-bar/: .mocharc.json  README.md  package-lock.json  package.json  tsconfig.test.json
memory/: constitution.md
rust_core/: Cargo.toml
rust_core/benches/: parallel_benchmarks.rs
rust_core/src/: documentation.rs  filesystem.rs  git_analyzer.rs  lib.rs  process_manager.rs  project_scanner.rs  text.rs  text_enhanced.rs  workflow_validator.rs
scripts/: README.md  customize_templates.py  diagnose-cde-tools.ps1  enforce-doc-governance.py  estimate_token_usage.py  generate_mcp_filesystem.py  install_rust_wheel.py  jules_monitor.py  progress_tracker.py  pyrefly_autofix.py  pyrefly_check.py  pyrefly_fix_batch.py  pyrefly_report.py  run_dogfooding_suite.py  validate-cde-config.ps1  validate_phase1.py  validate_spec_kit_conformity.py
specs/: BENCHMARK.md  PYTHON_314_MIGRATION_SUMMARY.md  README.md  readme.md
src/: server.py  server.py.backup
src/rust_core/: Cargo.toml
src/rust_core/src/: documentation.rs  filesystem.rs  lib.rs  text.rs
tests/: __init__.py  test_recipe_downloader.py  test_workflow_manager.py
(+558 files in other folders)
