[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cde-orchestrator-mcp"
version = "0.1.0"
description = "CDE Orchestrator MCP Server for Context-Driven Engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.12.3",
    "pyyaml",
    "pydantic",
    "python-dotenv",
    "lxml",
    "pathspec",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "black>=23.0",
    "mypy>=1.0",
    "isort>=5.0",
    "types-PyYAML",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]