[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cde-orchestrator-mcp"
version = "0.2.0"
description = "CDE Orchestrator MCP Server for Context-Driven Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.13.0",
    "pyyaml",
    "pydantic",
    "python-dotenv",
    "lxml",
    "pathspec",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "black>=23.0",
    "mypy>=1.0",
    "isort>=5.0",
    "types-PyYAML",
    "pytest-cov",
    "maturin>=1.0,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']  # py314 not yet supported by black, using py313

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
follow_imports = "silent"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpaths = ["src"]