[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cde-orchestrator-mcp"
version = "0.2.0"
description = "CDE Orchestrator MCP Server with Rust Performance for Context-Driven Engineering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0 OR MIT"}
authors = [
    {name = "Ibrahim Bello", email = "iberi22@users.noreply.github.com"}
]
keywords = ["mcp", "context-driven-engineering", "ai-orchestration", "rust", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp==2.13.0",
    "pyyaml",
    "pydantic",
    "python-dotenv",
    "lxml",
    "pathspec",
]

[project.urls]
Homepage = "https://github.com/iberi22/CDE-Orchestrator-MCP"
Documentation = "https://github.com/iberi22/CDE-Orchestrator-MCP/tree/main/docs"
Repository = "https://github.com/iberi22/CDE-Orchestrator-MCP"
Changelog = "https://github.com/iberi22/CDE-Orchestrator-MCP/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "black>=23.0",
    "mypy>=1.0",
    "pyrefly>=0.42.0",
    "isort>=5.0",
    "types-PyYAML",
    "pytest-cov",
    "maturin>=1.0,<2.0",
]

[tool.maturin]
# PyO3 bindings con configuraci칩n optimizada
bindings = "pyo3"
module-name = "cde_rust_core"
manifest-path = "rust_core/Cargo.toml"
# Soportar Python 3.11-3.14
python-versions = ["3.11", "3.12", "3.13", "3.14"]
# Strip symbols para wheels m치s peque침os
strip = true
# Incluir archivos de licencia
include = ["LICENSE", "LICENSE-AGPL-3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']  # py314 not yet supported by black, using py313

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpaths = ["src"]

[tool.pyrefly]
# Configuraci칩n de Pyrefly para type checking
python-version = "3.14"
strict = true
show-error-codes = true
flow-types = true
infer-return-types = true
parallel = true
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "rust_core",
    "ci-wheels",
    "temp-wheels",
]
