[package]
name = "cde_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "cde_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.8.0"
walkdir = "2"
glob = "0.3.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
