[package]
name = "cde_rust_core"
version = "0.2.0"
edition = "2021"
authors = ["Ibrahim Bello <iberi22@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
description = "Rust-accelerated core for CDE Orchestrator MCP"
repository = "https://github.com/iberi22/CDE-Orchestrator-MCP"
keywords = ["mcp", "performance", "parallelism"]

[lib]
name = "cde_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.8.0"
walkdir = "2"
glob = "0.3.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # Para YAML frontmatter parsing
num_cpus = "1.16"   # Para auto-detectar CPU cores

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"  # Property-based testing

[[bench]]
name = "parallel_benchmarks"
harness = false
